--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 .blog{
     width: 80%;
-    margin: auto;
+    margin: 100px;
     text-align: center;
-    padding-top: 100px; 
+    padding-top: 5px; 
+    margin-top: 10px;
 }
 .blog h2{
     font-size: 40px;
@@ -27,4 +28,17 @@ h5{
 }
 .blog-col img{
     border-radius: 10px;
+    margin-top: 10px;
+}
+.footer img{
+    margin-top: 50px;
+    padding: 0%;
+    margin-left: 75px;
+}
+.footer-col{
+    flex-basis: 20%;
+    text-align: left;
+    margin: 100px;
+    margin-top: 20px;
+    padding: 10px;
 }
