--- a/style.css
+++ b/style.css
@@ -1,3 +1,89 @@
+
+header {
+    width: 100%;
+    height: 7.5rem;
+    padding: 2.5rem 0;
+    margin: 30px;
+    position: relative;
+    z-index: 999;
+}
+.logo {
+    height: 4rem; 
+}
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.nav-ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-ul li {
+    list-style: none;
+    margin: 0 1.5rem;
+    color: black;
+}
+li a {
+    font-size: 18px;
+    text-decoration: none;
+    padding-bottom: 2rem;
+    position: relative;
+}
+li a:hover {
+    color: green;
+}
+/*.blog ul li a::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: .3rem;
+    background:green
+}*/
+
+.btn {
+    font-size: 15px;
+    font-weight: 700;
+    color: black;
+    text-decoration: none;
+    padding: 15px 2.5rem;
+    margin-right: 30px;
+    background-color: green;
+    border-radius: 10px;
+    opacity: 1;
+    transform: scaleX(1);
+    transition: all .2s;
+}
+.btn:hover {
+    opacity: .8;
+    transform: scaleX(1.1);
+}
+.btn-1 {
+    font-size: 15px;
+    font-weight: 700;
+    color: black;
+    text-decoration: none;
+    padding: 10px 3.1rem;
+    margin-right: 30px;
+    border: green solid;
+    border-radius: 10px;
+    opacity: 1;
+    transform: scaleX(1);
+    transition: all .2s;
+}
+.btn-1:hover {
+    opacity: .8;
+    transform: scaleX(1.1);
+}
+
+
+
+/*     Opeyemi's Section     */
 .blog{
     width: 80%;
     margin: 100px;
@@ -21,6 +107,7 @@ h5{
     margin-top: 5%;
     display: flex;
     justify-content: space-between;
+    margin: 10px;
 }
 .blog-col{ 
     flex-basis: 31%;
@@ -44,18 +131,18 @@ h5{
 .products img{
     margin-top: 0.1rem;
     padding: 0%;
-    margin-left: 75px;
+    margin: 30px;
     margin-bottom: 10px;
 }
 .products-col{
     flex-basis: 20%;
     text-align: left;
-    margin: 70px;
+    margin: 80px;
     margin-top: 20px;
     padding: 10px;
 }
 .products-col p{
-    word-spacing: 3px;
+   word-spacing: 3px;
    text-align: start;
 }
 .footer{
