--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 *{
   box-sizing: border-box;
   margin: 0;
@@ -387,7 +386,8 @@
   justify-content: space-between;
   font-size: 16px;
   color: rgb(33, 37, 41);
-  font-family: Verdana, Geneva, Tahoma, sans-serif;  
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  
   padding-bottom: 10px;
   padding-left: 60px;
   padding-right:60px;
@@ -634,4 +634,76 @@ li a:hover {
 .btn-1:hover {
   opacity: .8;
   transform: scaleX(1.1);
+}
+
+/* Opeyemi section */
+.blog{
+  width: 80%;
+  margin: 100px;
+  text-align: center;
+  padding-top: 5px; 
+  margin-top: 100px;
+  font-family: 'Public Sans', sans-serif;
+}
+.blog h2{
+  font-size: 40px;
+  text-align: center;
+  font-weight: 5px;
+}
+h5{
+  font-size: 30px;
+  text-align: center;
+  margin-top: 5px;
+  margin-bottom: 30px;
+}
+.row{
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+}
+.blog-col{ 
+  flex-basis: 31%;
+  border-radius: 10px;
+  margin-bottom: 30%;
+  text-align: left;
+}
+.blog-col img{
+  border-radius: 10px;
+  margin-top: 10px;
+}
+.blog-col a{
+  color: green;
+}
+.blog-col a:hover{
+  color: grey;
+}
+.products{
+  margin-top: 20px;
+}
+.products img{
+  margin-top: 0.1rem;
+  padding: 0%;
+  margin: 30px;
+  margin-bottom: 10px;
+}
+.products-col{
+  flex-basis: 20%;
+  text-align: left;
+  margin: 80px;
+  margin-top: 20px;
+  padding: 10px;
+}
+.products-col p{
+ word-spacing: 3px;
+ text-align: start;
+}
+.footer{
+  text-align: center;
+}
+.icons .fab{
+      color: black;
+      margin: 0 2px;
+      cursor: pointer;
+      padding: 1px 0;
 }
